@@ -607,6 +607,9 @@ c_func
 (paren
 r_int
 id|minor
+comma
+r_int
+id|nonblock
 )paren
 (brace
 r_int
@@ -649,6 +652,9 @@ c_cond
 id|error
 op_logical_and
 (paren
+id|nonblock
+op_logical_or
+(paren
 id|LP_F
 c_func
 (paren
@@ -656,6 +662,7 @@ id|minor
 )paren
 op_amp
 id|LP_ABORT
+)paren
 )paren
 )paren
 r_break
@@ -757,6 +764,27 @@ r_int
 id|copy_size
 op_assign
 id|count
+suffix:semicolon
+r_int
+id|nonblock
+op_assign
+(paren
+(paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
+)paren
+op_logical_or
+(paren
+id|LP_F
+c_func
+(paren
+id|minor
+)paren
+op_amp
+id|LP_ABORT
+)paren
+)paren
 suffix:semicolon
 macro_line|#ifdef LP_STATS
 r_if
@@ -881,12 +909,19 @@ id|minor
 dot
 id|dev
 comma
+(paren
+id|nonblock
+ques
+c_cond
+id|PARPORT_INACTIVITY_O_NONBLOCK
+suffix:colon
 id|lp_table
 (braket
 id|minor
 )braket
 dot
 id|timeout
+)paren
 )paren
 suffix:semicolon
 r_if
@@ -898,6 +933,8 @@ op_assign
 id|lp_wait_ready
 (paren
 id|minor
+comma
+id|nonblock
 )paren
 )paren
 op_eq
@@ -1004,6 +1041,8 @@ op_assign
 id|lp_wait_ready
 (paren
 id|minor
+comma
+id|nonblock
 )paren
 suffix:semicolon
 r_if
@@ -1022,6 +1061,28 @@ l_int|0
 id|retv
 op_assign
 id|error
+suffix:semicolon
+r_break
+suffix:semicolon
+)brace
+r_else
+r_if
+c_cond
+(paren
+id|nonblock
+)paren
+(brace
+r_if
+c_cond
+(paren
+id|retv
+op_eq
+l_int|0
+)paren
+id|retv
+op_assign
+op_minus
+id|EAGAIN
 suffix:semicolon
 r_break
 suffix:semicolon
@@ -1265,6 +1326,27 @@ id|minor
 dot
 id|lp_buffer
 suffix:semicolon
+r_int
+id|nonblock
+op_assign
+(paren
+(paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
+)paren
+op_logical_or
+(paren
+id|LP_F
+c_func
+(paren
+id|minor
+)paren
+op_amp
+id|LP_ABORT
+)paren
+)paren
+suffix:semicolon
 r_if
 c_cond
 (paren
@@ -1303,6 +1385,75 @@ id|minor
 )braket
 )paren
 suffix:semicolon
+id|parport_set_timeout
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev
+comma
+(paren
+id|nonblock
+ques
+c_cond
+id|PARPORT_INACTIVITY_O_NONBLOCK
+suffix:colon
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|timeout
+)paren
+)paren
+suffix:semicolon
+id|parport_negotiate
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port
+comma
+id|IEEE1284_MODE_COMPAT
+)paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|parport_negotiate
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port
+comma
+id|IEEE1284_MODE_NIBBLE
+)paren
+)paren
+(brace
+id|retval
+op_assign
+op_minus
+id|EIO
+suffix:semicolon
+r_goto
+id|out
+suffix:semicolon
+)brace
+r_while
+c_loop
+(paren
+id|retval
+op_eq
+l_int|0
+)paren
+(brace
 id|retval
 op_assign
 id|parport_read
@@ -1314,6 +1465,136 @@ comma
 id|count
 )paren
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|retval
+OG
+l_int|0
+)paren
+r_break
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|nonblock
+)paren
+(brace
+id|retval
+op_assign
+op_minus
+id|EAGAIN
+suffix:semicolon
+r_break
+suffix:semicolon
+)brace
+multiline_comment|/* Wait for data. */
+r_if
+c_cond
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port-&gt;irq
+op_eq
+id|PARPORT_IRQ_NONE
+)paren
+(brace
+id|parport_negotiate
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port
+comma
+id|IEEE1284_MODE_COMPAT
+)paren
+suffix:semicolon
+id|lp_error
+(paren
+id|minor
+)paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|parport_negotiate
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port
+comma
+id|IEEE1284_MODE_NIBBLE
+)paren
+)paren
+(brace
+id|retval
+op_assign
+op_minus
+id|EIO
+suffix:semicolon
+r_goto
+id|out
+suffix:semicolon
+)brace
+)brace
+r_else
+id|interruptible_sleep_on_timeout
+(paren
+op_amp
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|waitq
+comma
+id|LP_TIMEOUT_POLLED
+)paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|signal_pending
+(paren
+id|current
+)paren
+)paren
+(brace
+id|retval
+op_assign
+op_minus
+id|ERESTARTSYS
+suffix:semicolon
+r_break
+suffix:semicolon
+)brace
+id|cond_resched
+(paren
+)paren
+suffix:semicolon
+)brace
+id|parport_negotiate
+(paren
+id|lp_table
+(braket
+id|minor
+)braket
+dot
+id|dev-&gt;port
+comma
+id|IEEE1284_MODE_COMPAT
+)paren
+suffix:semicolon
+id|out
+suffix:colon
 id|lp_release_parport
 (paren
 op_amp
