@@ -1,4 +1,4 @@
-multiline_comment|/*&n; * linux/drivers/char/ppdev.c&n; *&n; * This is the code behind /dev/parport* -- it allows a user-space&n; * application to use the parport subsystem.&n; *&n; * Copyright (C) 1998-2000 Tim Waugh &lt;tim@cyberelk.demon.co.uk&gt;&n; *&n; * This program is free software; you can redistribute it and/or&n; * modify it under the terms of the GNU General Public License&n; * as published by the Free Software Foundation; either version&n; * 2 of the License, or (at your option) any later version.&n; *&n; * A /dev/parportx device node represents an arbitrary device&n; * on port &squot;x&squot;.  The following operations are possible:&n; *&n; * open&t;&t;do nothing, set up default IEEE 1284 protocol to be COMPAT&n; * close&t;release port and unregister device (if necessary)&n; * ioctl&n; *   EXCL&t;register device exclusively (may fail)&n; *   CLAIM&t;(register device first time) parport_claim_or_block&n; *   RELEASE&t;parport_release&n; *   SETMODE&t;set the IEEE 1284 protocol to use for read/write&n; *   SETPHASE&t;set the IEEE 1284 phase of a particular mode.  Not to be&n; *              confused with ioctl(fd, SETPHASER, &amp;stun). ;-)&n; *   DATADIR&t;data_forward / data_reverse&n; *   WDATA&t;write_data&n; *   RDATA&t;read_data&n; *   WCONTROL&t;write_control&n; *   RCONTROL&t;read_control&n; *   FCONTROL&t;frob_control&n; *   RSTATUS&t;read_status&n; *   NEGOT&t;parport_negotiate&n; *   YIELD&t;parport_yield_blocking&n; *   WCTLONIRQ&t;on interrupt, set control lines&n; *   CLRIRQ&t;clear (and return) interrupt count&n; *   SETTIME&t;sets device timeout (struct timeval)&n; *   GETTIME&t;gets device timeout (struct timeval)&n; *   GETMODES&t;gets hardware supported modes (unsigned int)&n; *   GETMODE&t;gets the current IEEE1284 mode&n; *   GETPHASE   gets the current IEEE1284 phase&n; *   GETFLAGS   gets current (user-visible) flags&n; *   SETFLAGS   sets current (user-visible) flags&n; * read/write&t;read or write in current IEEE 1284 protocol&n; * select&t;wait for interrupt (in readfds)&n; *&n; * Changes:&n; * Added SETTIME/GETTIME ioctl, Fred Barnes, 1999.&n; *&n; * Arnaldo Carvalho de Melo &lt;acme@conectiva.com.br&gt; 2000/08/25&n; * - On error, copy_from_user and copy_to_user do not return -EFAULT,&n; *   They return the positive number of bytes *not* copied due to address&n; *   space errors.&n; *&n; * Added GETMODES/GETMODE/GETPHASE ioctls, Fred Barnes &lt;frmb2@ukc.ac.uk&gt;, 03/01/2001.&n; * Added GETFLAGS/SETFLAGS ioctls, Fred Barnes, 04/2001&n; */
+multiline_comment|/*&n; * linux/drivers/char/ppdev.c&n; *&n; * This is the code behind /dev/parport* -- it allows a user-space&n; * application to use the parport subsystem.&n; *&n; * Copyright (C) 1998-2000, 2002 Tim Waugh &lt;tim@cyberelk.net&gt;&n; *&n; * This program is free software; you can redistribute it and/or&n; * modify it under the terms of the GNU General Public License&n; * as published by the Free Software Foundation; either version&n; * 2 of the License, or (at your option) any later version.&n; *&n; * A /dev/parportx device node represents an arbitrary device&n; * on port &squot;x&squot;.  The following operations are possible:&n; *&n; * open&t;&t;do nothing, set up default IEEE 1284 protocol to be COMPAT&n; * close&t;release port and unregister device (if necessary)&n; * ioctl&n; *   EXCL&t;register device exclusively (may fail)&n; *   CLAIM&t;(register device first time) parport_claim_or_block&n; *   RELEASE&t;parport_release&n; *   SETMODE&t;set the IEEE 1284 protocol to use for read/write&n; *   SETPHASE&t;set the IEEE 1284 phase of a particular mode.  Not to be&n; *              confused with ioctl(fd, SETPHASER, &amp;stun). ;-)&n; *   DATADIR&t;data_forward / data_reverse&n; *   WDATA&t;write_data&n; *   RDATA&t;read_data&n; *   WCONTROL&t;write_control&n; *   RCONTROL&t;read_control&n; *   FCONTROL&t;frob_control&n; *   RSTATUS&t;read_status&n; *   NEGOT&t;parport_negotiate&n; *   YIELD&t;parport_yield_blocking&n; *   WCTLONIRQ&t;on interrupt, set control lines&n; *   CLRIRQ&t;clear (and return) interrupt count&n; *   SETTIME&t;sets device timeout (struct timeval)&n; *   GETTIME&t;gets device timeout (struct timeval)&n; *   GETMODES&t;gets hardware supported modes (unsigned int)&n; *   GETMODE&t;gets the current IEEE1284 mode&n; *   GETPHASE   gets the current IEEE1284 phase&n; *   GETFLAGS   gets current (user-visible) flags&n; *   SETFLAGS   sets current (user-visible) flags&n; * read/write&t;read or write in current IEEE 1284 protocol&n; * select&t;wait for interrupt (in readfds)&n; *&n; * Changes:&n; * Added SETTIME/GETTIME ioctl, Fred Barnes, 1999.&n; *&n; * Arnaldo Carvalho de Melo &lt;acme@conectiva.com.br&gt; 2000/08/25&n; * - On error, copy_from_user and copy_to_user do not return -EFAULT,&n; *   They return the positive number of bytes *not* copied due to address&n; *   space errors.&n; *&n; * Added GETMODES/GETMODE/GETPHASE ioctls, Fred Barnes &lt;frmb2@ukc.ac.uk&gt;, 03/01/2001.&n; * Added GETFLAGS/SETFLAGS ioctls, Fred Barnes, 04/2001&n; */
 macro_line|#include &lt;linux/module.h&gt;
 macro_line|#include &lt;linux/init.h&gt;
 macro_line|#include &lt;linux/sched.h&gt;
@@ -55,6 +55,10 @@ DECL|member|saved_state
 r_struct
 id|ieee1284_info
 id|saved_state
+suffix:semicolon
+DECL|member|default_inactivity
+r_int
+id|default_inactivity
 suffix:semicolon
 )brace
 suffix:semicolon
@@ -145,11 +149,6 @@ id|bytes_read
 op_assign
 l_int|0
 suffix:semicolon
-id|ssize_t
-id|got
-op_assign
-l_int|0
-suffix:semicolon
 r_struct
 id|parport
 op_star
@@ -229,12 +228,28 @@ op_or
 id|IEEE1284_ADDR
 )paren
 suffix:semicolon
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+(paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
+)paren
+ques
+c_cond
+id|PARPORT_INACTIVITY_O_NONBLOCK
+suffix:colon
+id|pp-&gt;default_inactivity
+)paren
+suffix:semicolon
 r_while
 c_loop
 (paren
 id|bytes_read
-OL
-id|count
+op_eq
+l_int|0
 )paren
 (brace
 id|ssize_t
@@ -247,8 +262,6 @@ r_int
 r_int
 comma
 id|count
-op_minus
-id|bytes_read
 comma
 id|PP_BUFFER_SIZE
 )paren
@@ -331,7 +344,7 @@ op_assign
 id|pport-&gt;ops-&gt;epp_read_data
 suffix:semicolon
 )brace
-id|got
+id|bytes_read
 op_assign
 (paren
 op_star
@@ -350,7 +363,7 @@ suffix:semicolon
 )brace
 r_else
 (brace
-id|got
+id|bytes_read
 op_assign
 id|parport_read
 (paren
@@ -365,53 +378,28 @@ suffix:semicolon
 r_if
 c_cond
 (paren
-id|got
-op_le
+id|bytes_read
+op_ne
 l_int|0
 )paren
-(brace
-r_if
-c_cond
-(paren
-op_logical_neg
-id|bytes_read
-)paren
-(brace
-id|bytes_read
-op_assign
-id|got
-suffix:semicolon
-)brace
 r_break
 suffix:semicolon
-)brace
 r_if
 c_cond
 (paren
-id|copy_to_user
-(paren
-id|buf
-op_plus
-id|bytes_read
-comma
-id|kbuffer
-comma
-id|got
-)paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
 )paren
 (brace
 id|bytes_read
 op_assign
 op_minus
-id|EFAULT
+id|EAGAIN
 suffix:semicolon
 r_break
 suffix:semicolon
 )brace
-id|bytes_read
-op_add_assign
-id|got
-suffix:semicolon
 r_if
 c_cond
 (paren
@@ -421,19 +409,11 @@ id|current
 )paren
 )paren
 (brace
-r_if
-c_cond
-(paren
-op_logical_neg
-id|bytes_read
-)paren
-(brace
 id|bytes_read
 op_assign
 op_minus
-id|EINTR
+id|ERESTARTSYS
 suffix:semicolon
-)brace
 r_break
 suffix:semicolon
 )brace
@@ -443,6 +423,34 @@ c_func
 )paren
 suffix:semicolon
 )brace
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+id|pp-&gt;default_inactivity
+)paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|bytes_read
+OG
+l_int|0
+op_logical_and
+id|copy_to_user
+(paren
+id|buf
+comma
+id|kbuffer
+comma
+id|bytes_read
+)paren
+)paren
+id|bytes_read
+op_assign
+op_minus
+id|EFAULT
+suffix:semicolon
 id|kfree
 (paren
 id|kbuffer
@@ -585,6 +593,22 @@ op_complement
 id|IEEE1284_DEVICEID
 op_or
 id|IEEE1284_ADDR
+)paren
+suffix:semicolon
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+(paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
+)paren
+ques
+c_cond
+id|PARPORT_INACTIVITY_O_NONBLOCK
+suffix:colon
+id|pp-&gt;default_inactivity
 )paren
 suffix:semicolon
 r_while
@@ -734,6 +758,28 @@ suffix:semicolon
 r_if
 c_cond
 (paren
+id|file-&gt;f_flags
+op_amp
+id|O_NONBLOCK
+)paren
+(brace
+r_if
+c_cond
+(paren
+op_logical_neg
+id|bytes_written
+)paren
+id|bytes_written
+op_assign
+op_minus
+id|EAGAIN
+suffix:semicolon
+r_break
+suffix:semicolon
+)brace
+r_if
+c_cond
+(paren
 id|signal_pending
 (paren
 id|current
@@ -762,6 +808,13 @@ c_func
 )paren
 suffix:semicolon
 )brace
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+id|pp-&gt;default_inactivity
+)paren
+suffix:semicolon
 id|kfree
 (paren
 id|kbuffer
@@ -1217,6 +1270,22 @@ suffix:semicolon
 id|info-&gt;phase
 op_assign
 id|pp-&gt;state.phase
+suffix:semicolon
+id|pp-&gt;default_inactivity
+op_assign
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+l_int|0
+)paren
+suffix:semicolon
+id|parport_set_timeout
+(paren
+id|pp-&gt;pdev
+comma
+id|pp-&gt;default_inactivity
+)paren
 suffix:semicolon
 r_return
 l_int|0
